[package]
name = "thermodav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minicaldav = "0.1"
toml = {version = "0.5"}
rumqttc = "0.11"
serde = {version = "1.0.136",default_features = false,  features = ["serde_derive"]}

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
